# Arm_inverse_kinematics

./: .gitmodules  CMakeLists.txt  README.md
include/: arm.h  common.h  common_libs.h  inverse_kinematics.h  vis_interface.h
src/: arm.cpp  common.cpp  inverse_kinematics.cpp  main.cpp  vis_interface.cpp
